@@ -165,7 +165,7 @@ export const TreeItemDirectEditInput = ({
         name="name"
         size="small"
         inputRef={textInput}
-        placeholder={'Enter the new name'}
+        placeholder={'Enter the new value'}
         value={state.newLabel}
         onChange={handleChange}
         onFocus={onFocusIn}
